--- a/App_Web/src/main/resources/templates/request/requests.html
+++ b/App_Web/src/main/resources/templates/request/requests.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
+      xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
     <title>Requests</title>
@@ -10,58 +10,66 @@
 <body>
 
 <nav th:replace="~{plugins/menu :: menu}" class="menu"></nav>
-
-<div class="left-side-area">
-    <h1 class="header">Show</h1>
-    <h2>Requests</h2>
-    <h3><a th:href="@{requests/create}" class="button-active">Create request</a></h3>
-</div>
-<div class="main-area">
-    <div>
-        <span>Size requests on page</span>
-        <select th:onchange="'window.location.href = \'' + @{/requests?sort=id,asc} + '&size=\' + this.value'">
-            <option th:text="@{Now: __${requests.getSize}__}"></option>
-            <option th:text="3"></option>
-            <option th:text="5"></option>
-            <option th:text="7"></option>
-            <option th:text="15"></option>
-        </select>
-
+<div class="main">
+    <div class="left-side-area">
+        <h1 class="header">Show</h1>
+        <h2>Requests</h2>
+        <h3><a th:href="@{requests/create}" class="button-active">Create request</a></h3>
     </div>
+    <div class="main-area">
+        <div>
+            <span>Size requests on page</span>
+            <select th:onchange="'window.location.href = \'' + @{/requests?sort=id,asc} + '&size=\' + this.value'">
+                <option th:text="@{Now: __${requests.getSize}__}"></option>
+                <option th:text="3"></option>
+                <option th:text="5"></option>
+                <option th:text="7"></option>
+                <option th:text="15"></option>
+            </select>
 
-    <table class="table">
-        <tr class="table-header">
-            <th></th>
-            <th></th>
-            <th></th>
-            <th>Users</th>
-            <th>Courses</th>
-            <th>Status</th>
-            <th>Actions</th>
-        </tr>
-        <tr th:each="request : ${requests}" th:object="${request}" class="table-data">
-            <td>
-                <a th:href="@{/requests/__*{id}__}" class="button">
-                    <i class="fa-solid fa-eye" title="View"></i>
-                </a>
-            </td>
-            <td>
-                <a th:href="@{/requests/update/__*{id}__}" class="button">
-                    <i class="fa-solid fa-file-pen" title="Edit"></i>
-                </a>
-            </td>
-            <td></td>
-            <td><a th:href="@{/users/__*{user.id}__}" th:text="*{user.firstName} + ' ' + *{user.lastName}">User</a></td>
-            <td><a th:href="@{/courses/__*{course.id}__}" th:text="*{course.title}">Course title</a></td>
-            <td th:text="*{status}"></td>
-            <td></td>
-        </tr>
-    </table>
+        </div>
 
-    <div th:insert="~{plugins/pagination :: pagination_fr}"
-         th:with="firstVer=${requests}">
+        <table class="table">
+            <tr class="table-header">
+                <th></th>
+                <th></th>
+                <th></th>
+                <th>Users</th>
+                <th>Courses</th>
+                <th sec:authorize="hasAuthority('MANAGER')">Status</th>
+                <th sec:authorize="hasAuthority('MANAGER')">Actions</th>
+            </tr>
+            <tr th:each="request : ${requests}" th:object="${request}" class="table-data">
+                <td>
+                    <a th:href="@{/requests/__*{id}__}" class="button">
+                        <i class="fa-solid fa-eye" title="View"></i>
+                    </a>
+                </td>
+                <td>
+                    <a th:href="@{/requests/update/__*{id}__}" class="button">
+                        <i class="fa-solid fa-file-pen" title="Edit"></i>
+                    </a>
+                </td>
+                <td></td>
+                <td><a th:href="@{/users/__*{user.id}__}" th:text="*{user.firstName} + ' ' + *{user.lastName}">User</a>
+                </td>
+                <td><a th:href="@{/courses/__*{course.id}__}" th:text="*{course.title}">Course title</a></td>
+                <td sec:authorize="hasAuthority('MANAGER')" th:text="*{status}"></td>
+                <form th:action="'/requests/update/' + ${request.id}" method="post" th:object="${request}">
+                    <td sec:authorize="hasAuthority('MANAGER')">
+                        <input type="hidden" name="user.id" th:value="*{user.id}">
+                        <input type="hidden" name="course.id" th:value="*{course.id}">
+                        <input type="hidden" name="status" th:value="CANCELLED">
+                        <input type="submit" value="Deactivate" class="button-active"/>
+                    </td>
+                </form>
+            </tr>
+        </table>
+
+        <div th:insert="~{plugins/pagination :: pagination_fr}"
+             th:with="firstVer=${requests}">
+        </div>
     </div>
 </div>
-
 </body>
 </html>
