--- a/App_Web/src/main/resources/templates/create_homework.html
+++ b/App_Web/src/main/resources/templates/create_homework.html
@@ -24,15 +24,13 @@
             <tr>
                 <td class="text" type="text">Student id</td>
                 <td><input type="text" name="student.id" th:value="${2}"></td>
+                <!--FIXME:remove hardcoded id from session-->
             </tr>
             <tr>
                 <td class="text">Comment</td>
                 <td><input type="text" name="comment"></td>
             </tr>
-            <tr>
-                <td class="text">File link</td>
-                <td><input type="text" name="fileLink.link"></td>
-            </tr>
+
         </table>
         <input type="submit" value="Submit">
         <input type="reset" value="Reset">
