--- a/App_Web/src/main/resources/templates/request/create_request.html
+++ b/App_Web/src/main/resources/templates/request/create_request.html
@@ -9,39 +9,41 @@
 <body>
 
 <nav th:replace="~{plugins/menu :: menu}" class="menu"></nav>
+<div class="main">
+    <div class="left-side-area">
+        <h1 class="header">Create</h1>
+        <h2>Request</h2>
+    </div>
 
-<div class="left-side-area">
-    <h1>Create</h1>
-    <h2>Request</h2>
-</div>
-
-<div class="main-area">
-    <form action="/requests/create" method="post">
-        <table>
-            <tr>
-                <td>User name</td>
-                <td>
-                    <select th:name="user.id">
-                        <option th:each="user : ${users}" th:object="${user}" th:value="*{id}"
-                                th:text="*{firstName} + ' ' + *{lastName}">USER
-                    </select>
-                </td>
-            </tr>
-            <tr>
-                <td>Curse</td>
-                <td>
-                    <select th:name="course.id">
-                        <option th:each="course : ${courses}" th:object="${course}" th:value="*{id}" th:text=*{title}>
-                            COURSE
-                    </select>
-                </td>
-            </tr>
-            <tr>
-                <td>Status</td>
-                <td>PROCESSING</td>
-        </table>
-        <button type="submit" class="button-active">Create request</button>
-    </form>
+    <div class="main-area">
+        <form action="/requests/create" method="post">
+            <table>
+                <tr>
+                    <td>User name</td>
+                    <td>
+                        <select th:name="user.id">
+                            <option th:each="user : ${users}" th:object="${user}" th:value="*{id}"
+                                    th:text="*{firstName} + ' ' + *{lastName}">USER
+                        </select>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Curse</td>
+                    <td>
+                        <select th:name="course.id">
+                            <option th:each="course : ${courses}" th:object="${course}" th:value="*{id}"
+                                    th:text=*{title}>
+                                COURSE
+                        </select>
+                    </td>
+                </tr>
+                <tr>
+                    <td>Status</td>
+                    <td><input type="text" value="PROCESSING" disabled></td>
+            </table>
+            <button type="submit" class="button-active">Create request</button>
+        </form>
+    </div>
 </div>
 </body>
 </html>
