--- a/App_Web/src/main/resources/templates/plugins/menu.html
+++ b/App_Web/src/main/resources/templates/plugins/menu.html
@@ -6,6 +6,7 @@
         <p><a class="text" href="/courses">Courses</a></p>
         <p sec:authorize="hasAnyAuthority('USER', 'TRAINER')"><a class="text" href="/courses">My courses</a></p>
         <p sec:authorize="hasAnyAuthority('MANAGER')"><a class="text" href="/requests">Requests</a></p>
+        <p sec:authorize="hasAnyAuthority('STUDENT')"><a class="text" th:href="@{/requests/student/__${#authentication.name}__}">My requests</a></p>
     </nav>
     <nav class="menu-right">
         <p sec:authorize="isAnonymous()"><a class="text" href="/auth/login">Sign In</a></p>
