LMS-39: Correct to work station

--- a/App_Web/src/main/resources/templates/request/student_requests.html
+++ b/App_Web/src/main/resources/templates/request/student_requests.html
@@ -36,7 +36,7 @@
             </tr>
             <tr th:each="request : ${requests}" th:object="${request}" class="table-data">
                 <td><a th:href="@{/courses/__*{course.id}__}" th:text="*{course.title}">Course title</a></td>
-            <form th:action="'/requests/update/' + ${request.id}" method="post" th:object="${request}" th:unless = "${#strings.toString(request.status)} == 'CANCELLED')">
+            <form th:action="'/requests/update/' + ${request.id}" method="post" th:object="${request}" th:unless = "${request.status.toString()} == 'CANCELLED'">
                 <td>
                     <input type="hidden" name="user.id" th:value="*{user.id}">
                     <input type="hidden" name="course.id" th:value="*{course.id}">
@@ -44,6 +44,7 @@
                     <input type="submit" value="Cancel subscription" class="button-active"/>
                 </td>
             </form>
+                <td th:if = "${request.status.toString()} == 'CANCELLED'">Cancelled</td>
             </tr>
         </table>
 
