--- a/App_Web/src/main/resources/templates/course/course.html
+++ b/App_Web/src/main/resources/templates/course/course.html
@@ -18,8 +18,12 @@
         <a sec:authorize="hasAuthority('MANAGER')" th:href="'/courses/updateForm/' + ${course.id}"
            class="button-active">Edit course</a>
         <h1 class="text" sec:authorize="hasAuthority('STUDENT')">Enroll in a course</h1>
-        <a sec:authorize="hasAuthority('STUDENT')" th:href="'/requests/create'"
-           class="button-active">Enroll</a>
+        <form action="/requests/create" method="post" sec:authorize="hasAuthority('STUDENT')">
+            <input type="hidden" name="user.email" th:value="${#authentication.name}">
+            <input type="hidden" name="course.id" th:value="${course.id}">
+            <input type="hidden" value="PROCESSING">
+            <button type="submit" class="button-active">Enroll</button>
+        </form>
     </div>
 
     <div class="main-area">
