--- a/App_Web/src/main/resources/templates/course/courses.html
+++ b/App_Web/src/main/resources/templates/course/courses.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en"
+      xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity">
 <head>
     <meta charset="UTF-8">
     <link href="/css/main.css" rel="stylesheet">
@@ -12,7 +14,7 @@
 <div class="left-side-area">
     <h1 class="header">Courses</h1>
     <h1 class="subheader">List<br> of all courses</h1>
-    <a href="/courses/createForm" class="button-active">Create</a>
+    <a sec:authorize="hasAnyAuthority('MANAGER')" href="/courses/createForm" class="button-active">Create</a>
 </div>
 <div>
     <div>
@@ -30,8 +32,8 @@
             <thead>
             <tr class="table-header">
                 <th></th>
-                <th></th>
-                <th></th>
+                <th sec:authorize="hasAnyAuthority('MANAGER')"></th>
+                <th sec:authorize="hasAnyAuthority('MANAGER')"></th>
                 <th>Title</th>
                 <th>Price</th>
                 <th>Start Date</th>
@@ -46,12 +48,12 @@
                             <i class="fa-solid fa-eye" title="View"></i>
                         </a>
                     </td>
-                    <td>
+                    <td sec:authorize="hasAnyAuthority('MANAGER')">
                         <a th:href="'/courses/updateForm/' + ${course.id}">
                             <i class="fa-solid fa-file-pen" title="Edit"></i>
                         </a>
                     </td>
-                    <td>
+                    <td sec:authorize="hasAnyAuthority('MANAGER')">
                         <a th:href="'/courses/delete/' + ${course.id}">
                             <i class="fa-solid fa-trash-can" title="Delete"></i>
                         </a>
