--- a/App_Web/src/main/resources/templates/new_password.html
+++ b/App_Web/src/main/resources/templates/new_password.html
@@ -14,11 +14,11 @@
     <table>
         <input type="hidden" name="userId" th:value="${userId}">
         <tr>
-            <td class="text" align="right">New password</td>
+            <td class="text">New password</td>
             <td><input type="password" placeholder="Enter new password" name="newPassword" required></td>
         </tr>
         <tr>
-            <td class="text" align="right">Confirm password</td>
+            <td class="text">Confirm password</td>
             <td><input type="password" placeholder="Confirm password" name="confirmPassword" required></td>
         </tr>
     </table>
