--- a/App_Web/src/main/resources/templates/recovery_pass.html
+++ b/App_Web/src/main/resources/templates/recovery_pass.html
@@ -13,7 +13,7 @@
 <form th:action="@{/auth/recoveryPass}" method="POST">
         <table>
             <tr>
-                <td class="text" align="right" wight="20%">Email</td>
+                <td class="text" wight="20%">Email</td>
                 <td><input type="email" placeholder="Enter email" name="email" required></td>
             </tr>
         </table>
