--- a/App_Web/src/main/resources/templates/registration.html
+++ b/App_Web/src/main/resources/templates/registration.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<nav th:replace="~{plugins/menu :: menu}" ></nav>
+<nav th:replace="~{plugins/menu :: menu}"></nav>
 
 <div class="left-side-area">
     <h1 class="header">Create user</h1>
@@ -18,35 +18,44 @@
     <form th:method="POST" th:action="@{/auth/registration}" th:object="${user}">
         <table>
             <tr>
-                <td class="text" align="right" wight="20%">Email</td>
+                <td class="text" wight="20%">Email</td>
                 <td><input type="email" placeholder="Enter email" name="email" required></td>
             </tr>
             <tr>
-                <td class="text" align="right">Password</td>
+                <td class="text">Password</td>
                 <td><input type="password" placeholder="Enter password" name="password" required></td>
             </tr>
             <tr>
-                <td class="text" align="right">Confirm password</td>
+                <td class="text">Confirm password</td>
                 <td><input type="password" placeholder="Confirm password" name="confirmPassword" required></td>
             </tr>
             <tr>
-                <td class="text" align="right">First name</td>
+                <td class="text">First name</td>
                 <td><input type="text" placeholder="Enter first name" name="firstName"></td>
             </tr>
             <tr>
-                <td class="text" align="right">Last name</td>
+                <td class="text">Last name</td>
                 <td><input type="text" placeholder="Enter last name" name="lastName"></td>
             </tr>
             <tr>
-                <td class="text" align="right">Patronymic name</td>
+                <td class="text">Patronymic name</td>
                 <td><input type="text" placeholder="Enter patronymic name" name="patronymicName"></td>
             </tr>
             <tr>
-                <td class="text" align="right">Contact preferences</td>
-                <td><input type="text" placeholder="Enter contact preferences" name="contactPreferences"></td>
+                <td class="text">Contact preferences</td>
+                <td>
+                    <select name="contactPreferences">
+                        <option value="TELEGRAM" selected>TELEGRAM
+                        <option value="INSTAGRAM">INSTAGRAM
+                        <option value="VIBER">VIBER
+                        <option value="WHATSAPP">WHATSAPP
+                        <option value="EMAIL">EMAIL
+                        <option value="CELLPHONE">CELLPHONE
+                    </select>
+                </td>
             </tr>
             <tr>
-                <td class="text" align="right">Social media</td>
+                <td class="text">Social media</td>
                 <td><input type="text" placeholder="Enter social media" name="socialMedia"></td>
             </tr>
 
