--- a/App_Web/src/main/resources/templates/lesson/create_lesson.html
+++ b/App_Web/src/main/resources/templates/lesson/create_lesson.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <link href="/css/main.css" rel="stylesheet">
@@ -14,7 +14,7 @@
         <input type="text" name="description"> Description<br>
         <input type="text" name="content"> Content<br>
         <input type="text" name="homeTask"> Home task<br>
-    <p> <input type="submit" value="Submit">
+    <p><input type="submit" value="Submit">
         <input type="reset" value="Reset">
     </p>
 </form>
