--- a/App_Web/src/main/resources/templates/plugins/menu.html
+++ b/App_Web/src/main/resources/templates/plugins/menu.html
@@ -1,6 +1,6 @@
 <nav th:fragment="menu" class="menu">
     <nav class="menu-left">
-        <img src="logo.jpg" alt="logo" style="width:50px">
+        <img src="/images/logo.jpg" alt="logo" style="width:50px">
         <p><a class="text" href="/">Home</a></p>
         <p sec:authorize="hasAuthority('MANAGER')"><a class="text" href="/users">Users</a></p>
         <p><a class="text" href="/courses">Courses</a></p>
