--- a/App_Web/src/main/resources/templates/users.html
+++ b/App_Web/src/main/resources/templates/users.html
@@ -19,16 +19,7 @@
     </div>
 
     <div>
-        <div>
-            <span>Size requests on page</span>
-            <select th:onchange="'window.location.href = \'' + @{/users?sort=id,asc} + '&size=\' + this.value'">
-                <option th:text="@{Now: __${users.getSize}__}"></option>
-                <option th:text="3"></option>
-                <option th:text="5"></option>
-                <option th:text="7"></option>
-                <option th:text="15"></option>
-            </select>
-        </div>
+        <div th:insert="~{plugins/pagination :: pagination}" th:with="firstVer=${courses}"></div>
         <table class="table">
             <thead>
             <tr class="table-header">
@@ -78,9 +69,6 @@
             </tbody>
 
         </table>
-        <div th:insert="~{plugins/pagination :: pagination_fr}"
-             th:with="firstVer=${users}"></div>
-
     </div>
 </div>
 </body>
