--- a/App_Web/src/main/resources/templates/homeworks.html
+++ b/App_Web/src/main/resources/templates/homeworks.html
@@ -14,16 +14,7 @@
     <h3><a th:href="@{/homeworks/create}" class="button">Create homework</a></h3>
 </div>
 <div class="main-area">
-    <div>
-        <span>Size requests on page</span>
-        <select th:onchange="'window.location.href = \'' + @{/homeworks?sort=id,asc} + '&size=\' + this.value'">
-            <option th:text="@{Now: __${homeworks.getSize}__}"></option>
-            <option th:text="3"></option>
-            <option th:text="5"></option>
-            <option th:text="7"></option>
-            <option th:text="15"></option>
-        </select>
-    </div>
+    <div th:insert="~{plugins/pagination :: pagination}" th:with="firstVer=${courses}"></div>
     <table class="table">
         <h2>Homeworks list</h2>
         <tr class="table-header">
@@ -60,8 +51,6 @@
             <td th:text="*{mark}">mark</td>
         </tr>
     </table>
-    <div th:insert="~{plugins/pagination :: pagination_fr}"
-         th:with="firstVer=${homeworks}"></div>
 </div>
 </body>
 </html>
