--- a/App_Web/src/main/resources/templates/lesson/lessons.html
+++ b/App_Web/src/main/resources/templates/lesson/lessons.html
@@ -18,16 +18,7 @@
     </div>
 
     <div class="main-area">
-        <div>
-            <span>Size requests on page</span>
-            <select th:onchange="'window.location.href = \'' + @{/lessons?sort=id,asc} + '&size=\' + this.value'">
-                <option th:text="@{Now: __${lessons.getSize}__}"></option>
-                <option th:text="5"></option>
-                <option th:text="10"></option>
-                <option th:text="15"></option>
-                <option th:text="20"></option>
-            </select>
-        </div>
+        <div th:insert="~{plugins/pagination :: pagination}" th:with="firstVer=${courses}"></div>
         <table class="table">
             <tr class="table-header">
                 <th></th>
@@ -63,8 +54,6 @@
             </th:block>
             </tbody>
         </table>
-        <div th:insert="~{plugins/pagination :: pagination_fr}"
-             th:with="firstVer=${lessons}"></div>
     </div>
 </div>
 </body>
